# pando

./: .gitignore  CMakeLists.txt  README.md  extensions.md  requirements.txt
cmake/: linenoise_fc_CMakeLists.txt  pmltq_gold_paths.cpp.in
docs/: BRANCH-IMPROVEMENTS.md  PANDO-CQL.md  SAMPLE-CORPUS.md
old/: pmltq_gold_sample.json
old/cwb_imported/: corpus.info  deprel.rev.idx  lemma.lex.idx  xpos.rev
old/fake_cwb/: s.avx_orig
old/sample_idx/: corpus.info  dep.euler_in  dep.euler_out  dep.head  deprel.rev.idx  form.lex  form.lex.idx  form.rev  s.rgn  upos.rev  upos.rev.idx
old/streaming_idx/: dep.euler_in  dep.euler_out  dep.head  feats_Definite.lex  feats_Degree.lex  feats_Degree.rev  feats_Gender.lex  feats_Gender.rev  feats_Number.lex  feats_Person.lex  feats_PronType.lex.idx  feats_PronType.rev  feats_Tense.lex  feats_VerbForm.lex  feats_VerbForm.lex.idx  feats_VerbForm.rev  feats_VerbForm.rev.idx  form.lex  form.rev  upos.lex.idx  xpos.lex.idx  xpos.rev.idx
scripts/: build_ud_corpus.py  psd_to_pando_vrt.py  ud_manifest.example.json
src/api/: index_api.cpp  index_api.h  pando_ffi.cpp  pando_ffi.h  program_api.cpp  query_json.cpp  query_json.h
src/cli/: check_main.cpp  cwb_import_main.cpp  index_main.cpp  query_main.cpp  server_main.cpp
src/core/: count_hierarchy_json.cpp  count_hierarchy_json.h  json_utils.h  mmap_file.cpp  mmap_file.h  types.h
src/corpus/: builder.cpp  builder.h  corpus.cpp  corpus.h  (+2 more)
wiki/: Aligned-Corpora-and-Parallel-Queries.md  CLI-Reference.md  Collocations-and-Keyness.md  Constituency-and-Nested-Regions.md  Contributing.md  Dependency-Queries.md  Home.md  Index-and-Corpus-Layout.md  Multivalue-Attributes.md  Overlapping-and-Nested-Regions.md  PANDO-CQL.md  Query-Language-and-CQL.md  Quick-Start.md  README.md  Sample-Corpora.md  TEITOK-Integration.md
(+95 files in other folders)
